--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
     <main id="main">
     </main>
     <!-- Open this file and call `mocha.run()` in console to run tests -->
+    <script src=node_modules/react/dist/react.js></script>
+    <script src=node_modules/react-dom/dist/react-dom.js></script>
+    <script src=components/App.js></script>
+    <script src=components/Filters.js></script>
+    <script src=components/App.js></script>
     <div id="mocha"></div>
     <script src="node_modules/mocha/mocha.js"></script>
     <script src="node_modules/expect/umd/expect.min.js"></script>
